--- a/segattlcd/configs/train.ini
+++ b/segattlcd/configs/train.ini
@@ -5,6 +5,11 @@ seed = 123
 nNeg = 5
 margin = 0.1
 exclude_panos = True
+lr = 0.0001
+lr_step = 5
+lr_gamma = 0.5
+weight_decay = 0.001
+momentum = 0.9
 image_resize_w = 640
 image_resize_h = 480
 
