--- a/segattlcd/configs/train.ini
+++ b/segattlcd/configs/train.ini
@@ -10,8 +10,12 @@ lr_step = 5
 lr_gamma = 0.5
 weight_decay = 0.001
 momentum = 0.9
+eval_every = 1
 image_resize_w = 640
 image_resize_h = 480
+
+[global_params]
+num_pcs = 4096
 
 [msls]
 train_cities = amman
