--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -15,6 +15,8 @@ image_resize_w = 640
 image_resize_h = 360
 
 [global_params]
+;mobilenet、resnet50、resnet101
+arch_type = mobilenet
 num_pcs = 4096
 
 [msls]
