完善网络结构

--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -1,5 +1,5 @@
 [train]
-batch_size = 3
+batch_size = 4
 optim = SGD
 seed = 123
 nNeg = 5
@@ -11,13 +11,13 @@ lr_gamma = 0.5
 weight_decay = 0.001
 momentum = 0.9
 eval_every = 1
-image_resize_w = 640
-image_resize_h = 360
+image_resize_w = 320
+image_resize_h = 180
 
 [global_params]
 ;mobilenet、resnet50、resnet101
 arch_type = mobilenet
-num_pcs = 4096
+num_pcs12 = 4096
 
 [msls]
 train_cities = amman
