--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -17,7 +17,7 @@ image_resize_h = 180
 [global_params]
 ;mobilenet、resnet50、resnet101
 arch_type = mobilenet
-num_pcs12 = 4096
+pca_rate = 0.5
 
 [msls]
 train_cities = amman
