--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -19,6 +19,7 @@ image_resize_h = 288
 ;mobilenet、resnet50、resnet101
 arch_type = mobilenet
 pca_rate = 1.0
+pretrained = True
 
 [msls]
 train_cities = amman
