完善验证集编写

--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -18,7 +18,7 @@ image_resize_h = 288
 [global_params]
 ;mobilenet、resnet50、resnet101
 arch_type = mobilenet
-pca_rate = 1.0
+pca_dim = 128
 pretrained = False
 attention = True
 
