完善验证集模型

--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -10,6 +10,8 @@ lr_step = 5
 lr_gamma = 0.5
 weight_decay = 0.001
 momentum = 0.9
+;没有提高的次数
+patience = 10
 eval_every = 1
 ;360 x 640
 image_resize_w = 512
