完善验证集编写

--- a/semattlcd/configs/train.ini
+++ b/semattlcd/configs/train.ini
@@ -23,6 +23,7 @@ arch_type = mobilenet
 pca_dim = 128
 pretrained = False
 attention = True
+top_n = 1,5,10,20,50,100
 
 [msls]
 train_cities = amman
