完善并行训练pipline

--- a/configs/train.ini
+++ b/configs/train.ini
@@ -1,6 +1,6 @@
 [model]
-; 基础网络的类型
-backbone = vgg16
+; 基础网络的类型，包括vgg16, mobilenets, mobilenetl
+backbone = mobilenetl
 
 [dataset]
 ; 数据集的名称
@@ -29,8 +29,8 @@ vlad_v2 = False
 patch_sizes = 2,5,8
 ; Patch的步长数量和大小
 strides = 1,1,1
-; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg
-pooling = patchnetvlad
+; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
+pooling = attentionpool
 ; 模型优化器的类型
 optim = ADAM
 ; 学习率
