--- a/configs/train.ini
+++ b/configs/train.ini
@@ -14,7 +14,7 @@ num_clusters = 20
 ; 一级Batch Size，是不进入网络时的Batch Size
 cache_batch_size = 20
 ; 二级Batch Size，是进入网络时的Batch Size
-batch_size = 8
+batch_size = 16
 ; 随机种子数
 seed = 456
 ; 是否使用WPCA
@@ -30,7 +30,7 @@ patch_sizes = 2,5,8
 ; Patch的步长数量和大小
 strides = 1,1,1
 ; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
-pooling = attentionpool
+pooling = netvlad
 ; 模型优化器的类型
 optim = ADAM
 ; 学习率
@@ -49,3 +49,6 @@ positive_distance_threshold = 25
 eval_every = 1
 ; 容忍准确率不上升的次数
 patience = 10
+
+; 是否使用faiss
+is_faiss = True
