--- a/configs/train.ini
+++ b/configs/train.ini
@@ -30,7 +30,7 @@ patch_sizes = 2,5,8
 ; Patch的步长数量和大小
 strides = 1,1,1
 ; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
-pooling = netvlad
+pooling = attentionpool
 ; 模型优化器的类型
 optim = ADAM
 ; 学习率
