修改ConvMixer网络方式

--- a/configs/train.ini
+++ b/configs/train.ini
@@ -1,6 +1,6 @@
 [model]
-; 基础网络的类型，包括vgg16, mobilenets, mobilenetl
-backbone = mobilenetl
+; 基础网络的类型，包括vgg16, mobilenets, mobilenetl, convmixer
+backbone = convmixer
 
 [dataset]
 ; 数据集的名称
@@ -14,7 +14,7 @@ num_clusters = 20
 ; 一级Batch Size，是不进入网络时的Batch Size
 cache_batch_size = 20
 ; 二级Batch Size，是进入网络时的Batch Size
-batch_size = 16
+batch_size = 2
 ; 随机种子数
 seed = 456
 ; 是否使用WPCA
