修改模型配置

--- a/configs/train.ini
+++ b/configs/train.ini
@@ -10,6 +10,21 @@ name = mapillary
 ; 聚类的数量
 num_clusters = 20
 
+[vgg16]
+encoding_dim = 512
+
+[mobilenets]
+encoding_dim = 96
+
+[mobilenetl]
+encoding_dim = 160
+
+[convmixer]
+encoding_dim = 512
+depth = 1
+kernel_size = 9
+patch_size = 16
+
 [train]
 ; 一级Batch Size，是不进入网络时的Batch Size
 cache_batch_size = 20
@@ -52,3 +67,4 @@ patience = 10
 
 ; 是否使用faiss
 is_faiss = True
+
