--- a/configs/train.ini
+++ b/configs/train.ini
@@ -1,6 +1,6 @@
 [model]
 ; 基础网络的类型，包括vgg16, mobilenets, mobilenetl, convmixer
-backbone = convmixer
+backbone = vgg16
 
 [dataset]
 ; 数据集的名称
@@ -8,7 +8,7 @@ name = mapillary
 
 [mapillary]
 ; 聚类的数量
-num_clusters = 20
+num_clusters = 16
 
 [vgg16]
 encoding_dim = 512
@@ -21,8 +21,8 @@ encoding_dim = 160
 
 [convmixer]
 encoding_dim = 512
-depth = 1
-kernel_size = 9
+depth = 20
+kernel_size = 5
 patch_size = 16
 
 [train]
@@ -45,7 +45,7 @@ patch_sizes = 2,5,8
 ; Patch的步长数量和大小
 strides = 1,1,1
 ; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
-pooling = attentionpool
+pooling = netvlad
 ; 模型优化器的类型
 optim = ADAM
 ; 学习率
