修改修正模型错误

--- a/configs/train.ini
+++ b/configs/train.ini
@@ -12,59 +12,80 @@ num_clusters = 16
 
 [vgg16]
 encoding_dim = 512
+; 二级Batch Size，是进入网络时的Batch Size
+batch_size = 4
 
 [mobilenets]
 encoding_dim = 96
+; 二级Batch Size，是进入网络时的Batch Size
+batch_size = 2
 
 [mobilenetl]
 encoding_dim = 160
+; 二级Batch Size，是进入网络时的Batch Size
+batch_size = 2
 
 [convmixer]
 encoding_dim = 512
 depth = 20
 kernel_size = 5
 patch_size = 16
-
-[train]
-; 一级Batch Size，是不进入网络时的Batch Size
-cache_batch_size = 20
 ; 二级Batch Size，是进入网络时的Batch Size
 batch_size = 2
+
+[train]
 ; 随机种子数
 seed = 456
-; 是否使用WPCA
-wpca = False
-; PCA降维后的维度
-num_pcas = 4096
+
+; 数据集配置====================================
+; 一级Batch Size，是不进入网络时的Batch Size
+cache_batch_size = 20
+
 ; 图像resize的大小
 resize = 480,640
-; 是否使用VLAD V2版本
-vlad_v2 = False
-; Patch的数量和大小
-patch_sizes = 2,5,8
-; Patch的步长数量和大小
-strides = 1,1,1
-; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
-pooling = netvlad
-; 模型优化器的类型
-optim = ADAM
-; 学习率
-lr = 0.0001
-; 支持混合精度
-AMP = False
-
-margin = 0.1
 ; 每个正例对应的负例数
 negative_size = 5
 ; 是否排除全景图像
 exclude_panos = True
 ; 正例的阈值距离
 positive_distance_threshold = 25
+
+; 损失函数配置==================================
+; 三元损失函数的Margin
+margin = 0.1
+
+;训练配置=====================================
+; 模型优化器的类型
+optim = ADAM
+; 学习率
+lr = 0.0001
+
+; SGD参数
+momentum = 0.9
+weight_decay = 0.001
+lr_step = 5
+lr_gamma = 0.5
+
+; 支持混合精度
+AMP = False
 ; 训练时经过多少次训练进行一次验证
 eval_every = 1
 ; 容忍准确率不上升的次数
 patience = 10
-
 ; 是否使用faiss
 is_faiss = True
 
+; 模型配置=====================================
+; 是否使用WPCA
+wpca = False
+; PCA降维后的维度
+num_pcas = 4096
+; 是否使用VLAD V2版本
+vlad_v2 = False
+; Patch的数量和大小
+patch_sizes = 2,5,8
+; Patch的步长数量和大小
+strides = 1,1,1
+
+; 使用的Pooling类型，包含patchnetvlad, netvlad, max, avg, attentionpool
+pooling = netvlad
